k8s/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /()(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: harusari-frontend-ser
                port:
                  number: 8000
#          - path: /api(/|$)(.*)
#            pathType: ImplementationSpecific
#            backend:
#              service:
#                name: harusari-backend-ser
#                port:
#                  number: 8001
